--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    color:#263138
+    color:#263138;
 }
 
 header{
@@ -38,7 +38,7 @@ header nav a {
 h1{
     font-weight: 600;
     font-size: 32px;
-    margin-bottom: 32px ;  
+    margin-bottom: 32px;  
 }
 
 .paragrafo {
@@ -58,7 +58,7 @@ h1{
     background-color: transparent;
     color: #FF725E;
     padding: 16px 32px;
-    text-underline-offset: 4px  ;
+    text-underline-offset: 4px;
 }
 
 .absolute {
@@ -72,13 +72,13 @@ h1{
 #clinica {
     display: flex;
     align-items: center;
-    gap: 64px
-    padding: 64px   
+    gap: 64px;
+    padding: 64px;   
 }
 
 #clinica li{
     margin-bottom: 16px;
-    margin: 32px
+    margin: 32px;
 }
 
 #farmacia {
@@ -126,4 +126,50 @@ h1{
     border-radius: 0 0 8px 8px;
     margin-top: -8px;
     padding: 24px;
+    height: 0;
+    overflow: hidden;
+}
+
+footer {
+    background-color: rgba(255, 152, 108, 0.25);
+    display: flex;
+    justify-content: space-between;
+    gap: 80px;
+    padding: 64px 80px;
+}
+
+footer img,
+footer .titulo {
+    display: block;
+    font-weight: 600;
+    margin-bottom: 24px;
+}
+
+footer nav a {
+    color: #263138;
+    display: block;
+    margin-bottom: 16px;
+    text-decoration: none;
+    max-width: 350px;
+}
+
+footer p {
+    margin-bottom: 16px;
+    max-width: 350px;
+}
+
+footer p a {
+    color: #263138;
+    text-decoration: none;
+}
+
+#copyright {
+    background-color: #263138;
+    color: #FFFFFF;
+    padding: 24px;
+    text-align: center;
+}
+
+#copyright a {
+    color: #FF9A6C;
 }
